Fix spacing in multiple selection tool

--- a/src/assets/admin/css/admin.scss
+++ b/src/assets/admin/css/admin.scss
@@ -82,6 +82,10 @@ html .media-modal.pc-modal {
 	.multiple-edit--action {
 		border-bottom: 1px solid #e8e8e8;
 		padding: 16px;
+		h3 {
+			padding: 0;
+			padding-bottom: 16px;
+		}
 		.order {
 			display: flex;
 			flex-direction: column;
